--- a/css/app.css
+++ b/css/app.css
@@ -112,3 +112,42 @@ h1 {
     float: right;
     cursor: pointer;
 }
+
+.score-panel .timer {
+    margin-left: 75px;
+}
+
+/*
+ * Modal screen display
+ */
+
+#modal {
+    background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 25px;
+    border: 2px solid #888;
+    border-radius: 10px;
+    width: 80%;
+    height: 80%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
